--- a/hyperpwn-pwndbg.yml
+++ b/hyperpwn-pwndbg.yml
@@ -1,7 +1,7 @@
 session_name: pwndbg
 global_options:
   default-shell: /bin/sleep
-  default-shell-args: infinity
+  default-shell-args: 100000000
 windows:
 - layout: 5d07,70x52,0,0[70x24,0,0{32x24,0,0,1,37x24,33,0[37x15,33,0,2,37x5,33,16,3,37x2,33,22,4]},70x15,0,25,5,70x11,0,41,6]
   panes:
